--- a/index.html
+++ b/index.html
@@ -303,14 +303,33 @@
 			</div>
 			<!-- 学习面板开始 -->
 			<div id="Study" class="container tab-pane fade"><br>
-
 				<div class="card">
 					<h3 class="card-header flexcenter">知识 + 推荐</h3>
 					<div>
 						<div class="card-body flexcenter">
 							<a class="atarget" target="_blank" href="https://www.mbalib.com">MBA智库</a>
+							<a class="atarget" target="_blank" href="https://ke.qq.com">腾讯课堂</a>
+							<a class="atarget" target="_blank" href="https://study.163.com/">网易云课堂</a>
 							<a class="atarget" target="_blank" href="https://open.163.com">网易公开课</a>
+							<a class="atarget" target="_blank" href="https://www.icourse163.org/">中国大学MOOC</a>
+							<a class="atarget" target="_blank" href="https://www.yiihuu.com/zt/nuke/">翼狐网</a>
+							<a class="atarget" target="_blank" href="https://www.51zxw.net/">51自学网</a>
+							<a class="atarget" target="_blank" href="https://huke88.com">虎课网</a>
+							<a class="atarget" target="_blank" href="http://www.52zxw.com/">52自学网</a>
 							<a class="atarget" target="_blank" href="aaaaaaaaaaaaaaaaa">网易公开课</a>
+							<a class="atarget" target="_blank" href="https://huke88.com/course/9011.html">虎课网达芬奇</a>
+							<a class="atarget" target="_blank" href="http://www.qinxue.com/41.html?sysref=prhx">勤学网Adobe Premiere</a>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<h3 class="card-header flexcenter">视频 + 美工</h3>
+					<div>
+						<div class="card-body flexcenter">
+							
+							<a class="atarget" target="_blank" href="https://www.adobe.com/cn/">AdobeCn</a>
+							<a class="atarget" target="_blank" href="https://www.newcger.com">newcger</a>
+							<a class="atarget" target="_blank" href="https://affinity.serif.com/zh-cn/">Affinity【类似psai】</a>
 						</div>
 					</div>
 				</div>
@@ -365,7 +384,6 @@
 					<h3 class="card-header flexcenter">办公 + 常用</h3>
 					<div>
 						<div class="card-body flexcenter">
-
 							<a href="http://www.gsxt.gov.cn/index.html" target="_blank" class="atarget">企业信息公示</a>
 							<a href="https://docs.qq.com/doc/DZFFTZGpjakNlcVlQ" target="_blank" class="atarget">问题列表</a>
 							<a href="https://pay.weixin.qq.com" target="_blank" class="atarget">微信支付</a>
@@ -384,11 +402,12 @@
 						<div class="card-body flexcenter">
 							<a href="https://work.weixin.qq.com" target="_blank" class="atarget">企业微信</a>
 							<a href="https://exmail.qq.com" target="_blank" class="atarget">企业邮箱</a>
+							<a href="https://www.alipay.com" target="_blank" class="atarget">支付宝</a>
+							<a href="https://b.alipay.com" target="_blank" class="atarget">企业支付宝</a>
+							<a href="https://open.alipay.com" target="_blank" class="atarget">支付宝开放平台</a>
 							<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
 							<a href="http://tmkj.ynwxxcx.com" target="_blank" class="atarget">腾马小程序</a>
 							<a href="http://ynxxwfw.ynwxxcx.com" target="_blank" class="atarget">偕行小程序</a>
-							<a class="atarget" class="weixin" href="http://www.baidu.com"><img class="qrcode" src=""
-								 alt="1234">商家管理平台</a>
 							<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
 							<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
 						</div>
